# nonebot_plugin_lolinfo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: urls.json
nonebot_plugin_lolinfo/: __init__.py  __main__.py  api.py  config.py
nonebot_plugin_lolinfo/controllers/: __init__.py  api.py  ctroll_hinfo.py  ctroll_rinfo.py
nonebot_plugin_lolinfo/draw/: __init__.py  draw_hinfo.py  draw_rinfo.py
nonebot_plugin_lolinfo/render/: __init__.py  draw_hinfo.py  draw_rinfo.py
nonebot_plugin_lolinfo/templates/: hinfo.jinja2  rinfo.jinja2
nonebot_plugin_lolinfo/templates/css/: hinfo.css  rinfo.css
nonebot_plugin_lolinfo/utils/: util_time.py  util_urlpath.py
