[tool.poetry]
name = "nonebot-plugin-lolinfo"
version = "0.3.2"
description = "ä»¥å›¾ç‰‡å½¢å¼å°†LOLçš„å„ç§æ•°æ®å‘é€åˆ°QQä¸­ ðŸŽ‰"
authors = ["Shadow403"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<4.0"
httpx = ">=0.27.0"
nonebot2 = ">=2.3.0"
nonebot-plugin-htmlrender = ">=0.3.0"
nonebot-plugin-send-anything-anywhere = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E402"]
